<resources>
    <string name="app_name">YeeBeeInvest</string>
    <!-- 引导页 -->
    <string name="splay_name">引导页</string>
    <string name="login_default">亿蜂平台——投资人版</string>
    <string name="login_name_hint">请输入姓名</string>
    <string name="login_pwd_hint">请输入您的密码</string>
    <string name="login">登 录</string>
    <string name="login_attestation">注册</string>
    <string name="login_forgotpwd">忘记密码</string>
    <string name="register_phone">请输入手机号码</string>
    <string name="register_code">请输入验证码</string>
    <string name="register_request_code">获取验证码</string>
    <string name="register_pwd">请输入您的密码</string>
    <string name="register_make_sure_pwd">请确定输入密码</string>
    <string name="register_submit">提 交</string>
    <string name="dialog_cancle">取消</string>
    <string name="dialog_ok">确认</string>
    <!-- 首页 -->
    <string name="scan">扫一扫</string>
    <string name="data_center">数据中心</string>
    <string name="tutor_today">今日推荐</string>
    <string name="home_project">查看的项目</string>
    <string name="home_attention_project">关注的项目</string>
    <string name="home_receive_project">收到的项目</string>
    <string name="home_invest_project">投资中的项目</string>
    <string name="home_take_project">订阅的项目</string>
    <string name="manage_center">管理中心</string>
    <string name="home_look_project">找项目</string>
    <string name="home_review_project">审项目</string>
    <string name="home_manage_project">管项目</string>

    <!-- 找项目 -->
    <string name="look_project_mate">为你匹配的专属项目</string>
    <string name="look_project_refresh_content">您今天还可以刷新</string>
    <string name="look_project_more">更多</string>
    <string name="look_project_refresh">换一批</string>

    <!-- 项目约谈 -->
    <string name="project_interview_edit">约谈填写</string>
    <string name="project_interview_sure">约谈确认</string>
    <string name="project_interview_complid">审批完成</string>
    <string name="interview_info">约谈信息</string>
    <string name="interview_time">约谈时间</string>
    <string name="interview_address">约谈地点</string>
    <string name="reconfer">再议</string>
    <string name="contact">联系人</string>
    <string name="hint_choice">点击选择</string>
    <string name="must_input">必填</string>
    <string name="must_tel">联系方式</string>
    <string name="word_info">留言信息</string>
    <string name="cancel">取消</string>
    <string name="edite">编辑</string>
    <string name="hint_word">请输入事件描述，不超过200个字</string>
    <string name="interview">立即预约</string>

    <!-- 项目详情 -->
    <string name="project_info">项目详情</string>
    <string name="project_plan">计划融资</string>
    <string name="project_already">已经融资</string>
    <string name="team_info">团队信息</string>
    <string name="team_introduce">团队介绍</string>
    <string name="team_person">核心成员</string>
    <string name="message_information">留言信息</string>
    <string name="project_filling">继续拖动，查看更多详情</string>

</resources>
