<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_bg"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                tools:context="com.yeebee.invest.activity.home.RegisterActivity">

    <ImageView
        android:id="@+id/iv_iv_login" android:layout_width="65dp"
        android:layout_height="80dp" android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp" android:background="@drawable/logo"/>

    <TextView
        android:id="@+id/tv_yeebee_invest" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_below="@id/iv_iv_login"
        android:layout_centerHorizontal="true" android:layout_marginTop="10dp"
        android:text="@string/login_default" android:textColor="@color/white"
        android:textSize="20sp"/>


    <RelativeLayout
        android:id="@+id/rl_rigister_name" android:layout_width="270dp"
        android:layout_height="50dp" android:layout_below="@id/tv_yeebee_invest"
        android:layout_centerHorizontal="true" android:layout_marginTop="20dp"
        android:background="#601c1c1e" android:drawableLeft="@drawable/login_name"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/et_name" android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_centerVertical="true"
            android:background="#001c1c1e" android:hint="@string/register_phone"
            android:textColor="@color/white" android:textColorHint="@color/white"
            android:textSize="16sp"/>

    </RelativeLayout>


    -
    <RelativeLayout
        android:id="@+id/rl_register_code" android:layout_width="270dp"
        android:layout_height="50dp" android:layout_below="@id/rl_rigister_name"
        android:layout_centerHorizontal="true" android:layout_marginTop="10dp"
        android:background="#601c1c1e" android:drawableLeft="@drawable/login_name"
        android:paddingLeft="15dp">

        <Button
            android:id="@+id/tv_code" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_alignParentRight="true"
            android:text="@string/register_request_code"/>

        <EditText
            android:id="@+id/et_code" android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_code" android:background="#001c1c1e"
            android:hint="@string/register_code" android:textColor="@color/white"
            android:textColorHint="@color/white" android:textSize="16sp"/>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_rigister_pwd" android:layout_width="270dp"
        android:layout_height="50dp" android:layout_below="@id/rl_register_code"
        android:layout_centerHorizontal="true" android:layout_marginTop="10dp"
        android:background="#601c1c1e" android:drawableLeft="@drawable/login_name"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/et_pwd" android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_centerVertical="true"
            android:background="#001c1c1e" android:hint="@string/register_pwd"
            android:textColor="@color/white" android:textColorHint="@color/white"
            android:textSize="16sp"/>

    </RelativeLayout>


    -
    <RelativeLayout
        android:id="@+id/rl_rigister_make_sure_pwd" android:layout_width="270dp"
        android:layout_height="50dp" android:layout_below="@id/rl_rigister_pwd"
        android:layout_centerHorizontal="true" android:layout_marginTop="10dp"
        android:background="#991c1c1e"
        android:drawableLeft="@drawable/login_name"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <EditText
            android:id="@+id/et_make_sure_pwd" android:layout_width="match_parent"
            android:layout_height="match_parent" android:layout_centerVertical="true"
            android:background="#801c1c1e" android:hint="@string/register_make_sure_pwd"
            android:textColor="@color/white" android:textColorHint="@color/white"
            android:textSize="16sp"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_login" android:layout_width="200dp"
        android:layout_height="45dp" android:layout_below="@id/rl_rigister_make_sure_pwd"
        android:layout_centerHorizontal="true" android:layout_marginTop="25dp"
        android:background="@drawable/login_btn_style" android:gravity="center"
        android:text="@string/register_submit" android:textColor="@color/text_color_1"
        android:textSize="20sp"/>

</RelativeLayout>