<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_bg"
    tools:context="com.yeebee.invest.activity.home.LoginActivity">

    <ImageView
        android:id="@+id/iv_iv_login"
        android:layout_width="65dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:background="@drawable/logo"/>

    <TextView
        android:id="@+id/tv_yeebee_invest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_default"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/iv_iv_login"
        android:layout_centerHorizontal="true"/>

    <RelativeLayout
        android:id="@+id/rl_login_name"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_below="@id/tv_yeebee_invest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:drawableLeft="@drawable/login_name"
        android:background="#601c1c1e">

        <ImageView
            android:id="@+id/iv_login_name_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/login_name"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/iv_login_name_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:background="#001c1c1e"
            android:textColorHint="@color/white"
            android:hint="@string/login_name_hint"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_login_pwd"
        android:layout_width="270dp"
        android:layout_height="50dp"
        android:layout_below="@id/rl_login_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:drawableLeft="@drawable/login_name"
        android:background="#601c1c1e">

        <ImageView
            android:id="@+id/iv_login_pwd_icon"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/login_pwd"
            android:layout_centerVertical="true"/>

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toRightOf="@id/iv_login_pwd_icon"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"
            android:textColorHint="@color/white"
            android:background="#001c1c1e"
            android:hint="@string/login_pwd_hint"
            android:textColor="@color/white"/>

    </RelativeLayout>
    
    <TextView
        android:id="@+id/tv_login"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_below="@id/rl_login_pwd"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/login_btn_style"
        android:text="@string/login"
        android:textColor="@color/text_color_1"
        android:gravity="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/tv_attesttation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_alignLeft="@id/tv_login"
        android:text="@string/login_attestation"
        android:layout_below="@id/tv_login"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/tv_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_alignRight="@id/tv_login"
        android:text="@string/login_forgotpwd"
        android:layout_below="@id/tv_login"
        android:layout_marginTop="25dp"/>



</RelativeLayout>
